--- a/kafka/Dockerfile
+++ b/kafka/Dockerfile
@@ -6,6 +6,7 @@ ENV DEBIAN_FRONTEND noninteractive
 ENV SCALA_VERSION 2.11
 ENV KAFKA_VERSION 0.10.1.0
 ENV KAFKA_HOME /opt/kafka_"$SCALA_VERSION"-"$KAFKA_VERSION"
+ENV PATH="${KAFKA_HOME}/bin:${PATH}"
 
 # Install Kafka, Zookeeper and other needed things
 RUN apt-get update && \
